{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 28,
  "lineage": "ff5a2938-e842-9d85-3e7c-408e20674e0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "listflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:104733724423:instance/i-0e8a0aa51cadb82a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8a0aa51cadb82a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003ce70157aa0041a",
            "private_dns": "ip-10-0-0-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.79",
            "public_ip": "3.218.252.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe61c8cf7dd27c5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074d47759a0f85744",
            "tags": {
              "Name": "listflow_server"
            },
            "tags_all": {
              "Name": "listflow_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044ab49a7c933a28b"
            ]
          },
          "dependencies": [
            "aws_security_group.listflow_sg",
            "aws_subnet.listflow_subnet",
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "listflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:internet-gateway/igw-0a2148da1dd8c27ce",
            "id": "igw-0a2148da1dd8c27ce",
            "owner_id": "104733724423",
            "tags": {
              "Name": "listflow_igw"
            },
            "tags_all": {
              "Name": "listflow_igw"
            },
            "vpc_id": "vpc-0b8b2b6342b13183f"
          },
          "dependencies": [
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "listflow_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:route-table/rtb-078558b6fc63fce4d",
            "id": "rtb-078558b6fc63fce4d",
            "owner_id": "104733724423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2148da1dd8c27ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8b2b6342b13183f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.listflow_igw",
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "listflow_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1a3994b16a51508",
            "route_table_id": "rtb-078558b6fc63fce4d",
            "subnet_id": "subnet-074d47759a0f85744"
          },
          "dependencies": [
            "aws_internet_gateway.listflow_igw",
            "aws_route_table.listflow_rt",
            "aws_subnet.listflow_subnet",
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "listflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:security-group/sg-044ab49a7c933a28b",
            "description": "Web traffic and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044ab49a7c933a28b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "listflow_sg",
            "name_prefix": "",
            "owner_id": "104733724423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "listflow_sg"
            },
            "tags_all": {
              "Name": "listflow_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8b2b6342b13183f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "listflow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:subnet/subnet-074d47759a0f85744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074d47759a0f85744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104733724423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "listflow_subnet"
            },
            "tags_all": {
              "Name": "listflow_subnet"
            },
            "vpc_id": "vpc-0b8b2b6342b13183f"
          },
          "dependencies": [
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "listflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:vpc/vpc-0b8b2b6342b13183f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01284890c1b5f501b",
            "default_route_table_id": "rtb-0621d5a3c1572de86",
            "default_security_group_id": "sg-0bccc165dc394b391",
            "dhcp_options_id": "dopt-378fac50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8b2b6342b13183f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0621d5a3c1572de86",
            "owner_id": "104733724423",
            "tags": {
              "Name": "listflow_vpc"
            },
            "tags_all": {
              "Name": "listflow_vpc"
            }
          }
        }
      ]
    }
  ]
}